# factifier

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
factifier/: __init__.py  core.py  decomposition.py  decontextualization.py  main.py  verification.py
