[tool.poetry]
name = "factifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-core = "^0.3.31"
langchain-openai = "^0.3.2"
langchain-community = "^0.3.15"
scikit-learn = "^1.6.1"
spacy = "^3.8.4"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
