[tool.poetry]
name = "factifier"
version = "0.2.0"
description = "Check facts in a sentence comparing it to another with DnDScore"
authors = ["JosepOriol Ayats <oriol.ayats@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-core = "^0.3.31"
scikit-learn = "^1.6.1"
spacy = "^3.8.4"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
ruff = "^0.9.3"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
